<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_subtitle">消防社会化工作平台</string>
    <string name="label_is_lastpage">已达到最后页</string>
    <string name="label_more_records">上拉加载更多&#8230;</string>
    <string name="main_record">检查记录</string>
    <string name="sweep_prompt">将二维码放入框内，即可自动扫描</string>
    <string name="my_message">消息</string>
    <string name="my_change_pwd">修改密码</string>
    <string name="my_help">帮助</string>
    <string name="my_exit">退出系统</string>
    <string name="my_title">我的</string>
    <string name="userinfo_edit">编辑</string>
    <string name="userinfo_title">个人资料</string>
    <string name="userinfo_name">姓名</string>
    <string name="userinfo_phone">手机号码</string>
    <string name="userinfo_map">所在区域</string>
    <string name="userinfo_company_name">单位名称</string>
    <string name="userinfo_state">状态</string>
    <string name="userinfo_agent">代理人</string>
    <string name="userinfo_edit_title">编辑资料</string>
    <string name="equipment_edit_title">编辑设备</string>
    <string name="userinfo_edit_cancel">取消</string>
    <string name="userinfo_edit_commit">提交</string>
    <string name="execute">执行</string>
    <string name="save">保存</string>
    <string name="save_data">保存数据</string>
    <string name="userinfo_edit_state_online">在岗</string>
    <string name="userinfo_edit_state_offline">请/休假中</string>
    <string name="agent_item_title">代理人</string>
    <string name="activity_search">请输入场所名称/负责人/场所代码</string>
    <string name="PlaceNumber">场所编号</string>
    <string name="PlaceAddress">场所地址</string>
    <string name="owner_name">业主姓名</string>
    <string name="site_type">场所类型</string>
    <string name="Place_responsibility">责任人</string>
    <string name="Placetelephone">电话</string>
    <string name="zhongdian_details_equipmentlist">设备清单</string>
    <string name="zhongdian_details_title">重点单位详情</string>
    <string name="activity_equipment_list_title">设备清单</string>
    <string name="Please_select">请选择</string>
    <string name="equipment_name">设备名称</string>
    <string name="equipment_number">设备代码</string>
    <string name="equipment_location">设备位置</string>
    <string name="maintenance">维保单位</string>
    <string name="maintenance_person">维保人员</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="deletee">&#12288;删 除&#12288;</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="please_put">请输入</string>
    <string name="complete">完成</string>
    <string name="select_mainteance">选择维保单位</string>
    <string name="place_name">场所名称</string>
    <string name="place_address">场所地址</string>
    <string name="place_type">场所类型</string>
    <string name="belonging_community">居委会</string>
    <string name="business_range">经营范围</string>
    <string name="place_license">有无证照</string>
    <string name="place_number">员工人数</string>
    <string name="place_floor">使用楼层</string>
    <string name="sanxiao_details">三小场所详情</string>
    <string name="sanxiao_add">添加三小场所</string>
    <string name="sanxiao_photos">现场照片</string>
    <string name="sanxiao_yes">有</string>
    <string name="sanxiao_no">无</string>
    <string name="sanxiao_owner">业主</string>
    <string name="sanxiao_administrator">管理人</string>
    <string name="sanxiao_head">负责人</string>
    <string name="task_details">任务详情</string>
    <string name="task_name">任务名称</string>
    <string name="task_type">任务类型</string>
    <string name="last_task_time">上次检查时间</string>
    <string name="last_task_trouble">上次检查隐患</string>
    <string name="designated_person">指派人</string>
    <string name="exist_trouble">存在隐患</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="scanning_result">扫描结果</string>
    <string name="scanning">扫码</string>
    <string name="write_comments">填写意见</string>
    <string name="inspection_records">自查记录</string>
    <string name="maintenance_records">维保记录</string>
    <string name="check_type">检查类型</string>
    <string name="equipment_state">设备状态</string>
    <string name="rectification_type">整改类型</string>
    <string name="Immediate_time">整改时间</string>
    <string name="organiser">　协办人</string>
    <string name="check_the_opinion">检查意见</string>
    <string name="now_the_photo">现场照片</string>
    <string name="review">复查</string>
    <string name="check_details">检查记录详情</string>
    <string name="inpsector">　检查人</string>
    <string name="rectification_plan">整改计划</string>
    <string name="expiration">到期时间</string>
    <string name="processing_results">处理结果</string>
    <string name="equipment_details">设备详情</string>
    <string name="review_record">复查记录</string>
    <string name="check_person">检查人</string>
    <string name="document_number">文书编号</string>
    <string name="review_date">复查日期</string>
    <string name="view_details">查看详情</string>
    <string name="equipment_hidden">设备隐患</string>
    <string name="check_time">检查时间</string>
    <string name="rectification_date">整改期限</string>
    <string name="check_address">检查地址</string>
    <string name="check_record_details">检查记录详情</string>
    <string name="review_time">复查时间</string>
    <string name="exist_hidden">存在隐患</string>
    <string name="rectification_after">(整改后)</string>
    <string name="rectification_after_title">整改后</string>
    <string name="rectification_last_title">整改前</string>
    <string name="input_opinion">意见填写</string>
    <string name="hidden_select">隐患选择</string>
    <string name="committee_select">选择居委会</string>
    <string name="login">登录</string>
    <string name="modify">修改</string>
    <string name="login_load">登录中.......</string>
    <string name="load_date">加载中.......</string>

    <string name="no_service">无法连接上服务器</string>
    <string name="no_service_check">点击屏幕重新加载数据</string>
    <string name="label_take_photo">拍摄照片</string>
    <string name="label_from_album">从相册选取</string>
    <string name="portrait_hint">点击图片可更改头像</string>
    <string name="http_url">http://192.168.1.130:9090/</string>
    <string name="wronginfo">用户信息错误</string>
    <string name="faillocated">定位失败，请修改手机设置，允许定位！</string>
    <string name="namepls">请输入用户名</string>
    <string name="pwpls">请输入密码</string>
    <string name="task">区域联防</string>
    <string name="tas">联防助手</string>
    <string name="messages">日常巡查</string>
    <string name="record">预警互助</string>
    <string name="microstation">微型消防站</string>
    <string name="helppls">通知通告</string>
    <string name="eachothercheck">待办事项</string>
    <string name="sendsos">您确定要发送求援信息吗？</string>
    <string name="jingqingsudi">警情速递</string>
    <string name="pressspeak">按住说话</string>
    <string name="recording">正在录音</string>
    <string name="presslisten">按下听语音</string>
    <string name="congratulations">恭喜！</string>
    <string name="uget">您获得</string>
    <string name="coin">金币</string>
    <string name="rawmmpls">请输入原密码</string>
    <string name="newmmpls">请输入新密码</string>
    <string name="surenewmm">确认新密码</string>
    <string name="submitting">正在提交数据</string>
    <string name="checkprofile">交叉检查情况摘要</string>
    <string name="microstationnear">附近微型消防站</string>
    <string name="sure">&#12288;确&#12288;&#12288;定&#12288;</string>
    <string name="cancle">&#12288;取&#12288;&#12288;消&#12288;</string>
    <string name="checkrecord">检查记录</string>
    <string name="username">用户名</string>
    <string name="mm">密&#12288;&#12288;码</string>
    <string name="filliner">填表人</string>
    <string name="checker">审核人</string>
    <string name="dutys">任务列表</string>
    <string name="unitchecked">受检单位:</string>
    <string name="times">次数：</string>
    <string name="dangerhidden">隐患：</string>
    <string name="change">整改：</string>
    <string name="unitbelongto">所属单位</string>
    <string name="address">地址</string>
    <string name="photo">照片</string>
    <string name="memberinfo">队员信息</string>
    <string name="installation">灭火装备</string>
    <string name="get">&#12288;领&#12288;&#12288;取&#12288;</string>
    <string name="changed">已整改</string>
    <string name="choosepls">请选择</string>
    <string name="check">&#12288;检&#12288;&#12288;查&#12288;</string>
    <string name="bignetter">大网格人</string>
    <string name="albumerr">相册故障</string>
    <string name="jianduyuan">监督员</string>
    <string name="xieguanyuan">协管员</string>
    <string name="guanxiadanwei">管辖单位</string>
    <string name="guanliren">管理人</string>
    <string name="zerenren">责任人</string>
    <string name="unitname">单位名称</string>
    <string name="shebeimingcheng">设备名称</string>
    <string name="shebeiweizhi">设备位置</string>
    <string name="weibaodanwei">维保单位</string>
    <string name="weibaoyuan">维保员</string>
    <string name="addrecord">录入记录</string>
    <string name="scan">扫描二维码</string>
    <string name="histor">历史记录</string>
    <string name="tosendalertmsg">发送预警信息</string>
    <string name="thisunitfier">本单位火灾</string>
    <string name="nearfire">附近火灾</string>
    <string name="blowup">爆炸</string>
    <string name="leak">泄漏</string>
    <string name="collapse">垮塌</string>
    <string name="checkerr">巡查员</string>
    <string name="checktimes">巡查次数</string>
    <string name="profile">总体情况</string>
    <string name="remark">备注</string>
    <string name="checkerrr">检查人</string>
    <string name="manager">主管人</string>
    <string name="changeinfo">修改信息</string>
    <string name="receive">签收</string>
    <string name="fold">折叠</string>
    <string name="taskfeedback">任务反馈：</string><!--        <string name="sanxiao_edit">编辑三小场所</string>
     <string name="my_zhongdian">重点单位信息维护</string>
 <string name="my_set">设置</string>
   <string name="my_sanxiao">三小场所信息维护</string>
    <string name="ming">名</string>
    <string name="meidi">枚，第</string>
    <string name="main_title">智安全区域联防管理系统</string>
    <string name="checkdate">巡查日期</string>
-->
    <string name="household">户籍化管理</string>
    <string name="dataerr">网络不稳定， 请重试</string>
</resources>