<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/twenty">

    <TextView
        android:id="@+id/thisunitfire"
        android:layout_width="@dimen/hundredtwenty"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/eighty"
        android:layout_toLeftOf="@+id/leak"
        android:layout_toStartOf="@+id/leak"
        android:drawableTop="@drawable/ic_compare_black_48dp"
        android:gravity="center_horizontal"
        android:text="@string/thisunitfier"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/nearfire"
        android:layout_width="@dimen/hundredtwenty"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/thisunitfire"
        android:drawableTop="@drawable/ic_compare_black_48dp"
        android:gravity="center_horizontal"
        android:text="@string/nearfire"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/blowup"
        android:layout_width="@dimen/hundredtwenty"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thisunitfire"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/thisunitfire"
        android:layout_marginBottom="@dimen/hundredforty"
        android:drawableTop="@drawable/ic_collections_black_48dp"
        android:gravity="center_horizontal"
        android:text="@string/blowup"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/leak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/blowup"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/ic_collections_bookmark_black_48dp"
        android:text="@string/leak"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/collapse"
        android:layout_width="@dimen/hundredtwenty"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nearfire"
        android:layout_alignStart="@+id/nearfire"
        android:layout_alignTop="@+id/leak"
        android:drawableTop="@drawable/ic_color_lens_black_48d"
        android:gravity="center_horizontal"
        android:text="@string/collapse"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</RelativeLayout>