<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:background="@color/EB2A29"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/userinfo_edit_cencel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center_vertical|end"
            android:text="@string/userinfo_edit_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/userinfo_edit_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens" />

        <TextView
            android:id="@+id/userinfo_edit_commit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/userinfo_edit_commit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/ten" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/ten"
                android:text="@string/userinfo_phone" />

            <EditText
                android:id="@+id/userinfo_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/twentyfive"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/B8B8B8"
                android:textCursorDrawable="@drawable/edittext_color_cursor"
                android:textSize="@dimen/fourteens" />
        </TableRow>

       <include layout="@layout/view"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/ten" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/ten"
                android:text="@string/userinfo_agent" />

            <TextView
                android:id="@+id/userinfo_edit_agent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_weight="1"
                android:gravity="center|end"
                android:paddingRight="@dimen/twenty"
                android:text="@string/choosepls"
                android:textColor="@color/B8B8B8" />

            <ImageView
                android:layout_width="@dimen/ten"
                android:layout_height="@dimen/fifteen"
                android:src="@drawable/arrow" />
        </TableRow>

        <include layout="@layout/view"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/ten" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/userinfo_state" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioReal"
                    style="@style/CustomRadioBtnLeft"
                    android:layout_width="@dimen/seventy"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="0"
                    android:gravity="center"
                    android:text="@string/userinfo_edit_state_online"
                    android:textColor="@color/userinfo_edit_radio_button_color"
                    android:textSize="@dimen/twelves" />

                <RadioButton
                    android:tag="1"
                    android:id="@+id/radioSpy"
                    style="@style/CustomRadioBtnRight"
                    android:layout_width="@dimen/seventy"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/userinfo_edit_state_offline"
                    android:textColor="@color/userinfo_edit_radio_button_color"
                    android:textSize="@dimen/twelves" />
            </RadioGroup>
        </TableRow>

        <include layout="@layout/view"/>
    </TableLayout>

</LinearLayout>