<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
		android:background="@color/EB2A29"
        android:gravity="start|center"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/info_back"
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/fifty"
            android:paddingRight="@dimen/ten"
            android:paddingEnd="@dimen/ten"
            android:src="@drawable/left_arrow" />
        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center"
            android:paddingRight="@dimen/five"
            android:paddingEnd="@dimen/five"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens"
            android:text="@string/checkrecord" />
        <TextView
            android:id="@+id/info_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center"
            android:paddingRight="@dimen/five"
            android:paddingEnd="@dimen/five"
            android:text="@string/Please_select"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens"
            android:visibility="gone" />
        <View
            android:layout_width="@dimen/one"
            android:layout_height="@dimen/thirty"
            android:layout_marginRight="@dimen/five"
            android:layout_marginEnd="@dimen/five"
            android:background="@color/CB2525" />
        <ImageView
            android:id="@+id/info_add"
            android:layout_width="@dimen/thirtyfive"
            android:layout_height="@dimen/thirtyfive"
            android:paddingRight="@dimen/ten"
            android:paddingEnd="@dimen/ten"
            android:src="@drawable/info_add"
            android:visibility="gone" />
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/five">
	    <TextView
	        android:layout_width="@dimen/eighty"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/username"/>
	        
	    <EditText 
	        android:id="@+id/edUser"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/five">
	    <TextView
	        android:layout_width="@dimen/eighty"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/mm"/>
	        
	    <EditText 
	        android:id="@+id/edPwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/five">
	    <TextView
	        android:layout_width="@dimen/eighty"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/filliner"/>
	        
	    <EditText 
	        android:id="@+id/edTbr"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/five">
	    <TextView
	        android:layout_width="@dimen/eighty"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/checker"/>
	        
	    <EditText 
	        android:id="@+id/edShr"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_margin="@dimen/five">
            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_gold"
                android:padding="@dimen/ten"
                android:text="@string/sure"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fourteens" />

	</LinearLayout>
</LinearLayout>