<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/twentyfive">

    <include layout="@layout/view"/>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="@dimen/forty">

        <TextView
            android:id="@+id/addrecord"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/dailychecktab"
            android:gravity="center"
            android:text="@string/addrecord"/>

        <TextView
            android:id="@+id/scan"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dailychecktab"
            android:gravity="center"
            android:text="@string/scan"/>

        <TextView
            android:id="@+id/history"
            android:layout_width="@dimen/zero"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dailychecktab"
            android:gravity="center"
            android:text="@string/histor"/>


    </LinearLayout>
    <include layout="@layout/view"/>


    <FrameLayout
        android:id="@+id/containerofdailycheck"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"/>
</LinearLayout>