<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="252dp"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:background="@drawable/coin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/info_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten"
            android:text="@string/congratulations"
            android:textColor="@color/DDDDDD"
            android:textSize="@dimen/twentyfours"/>

        <LinearLayout
            android:id="@id/layoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uget"
                android:textColor="@color/DDDDDD"
                android:textSize="@dimen/twentyfours"/>

            <TextView
                android:id="@+id/tvCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/DDDDDD"
                android:textSize="@dimen/thirtysixs"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin"
                android:textColor="@color/DDDDDD"
                android:textSize="@dimen/twentyfours"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@id/layoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/ten"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_gold"
            android:padding="@dimen/ten"
            android:text="@string/get"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteens"/>
    </LinearLayout>
</RelativeLayout>

